syntax = "proto3";

package cocopuff.account;

option go_package = "github.com/orsenkucher/cocopuff/account/pb";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (Account) {
  }

  rpc GetAccount (GetAccountRequest) returns (Account) {
  }

  rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse) {
  }
}

message Account {
  string id = 1;
  string name = 2;
}

message CreateAccountRequest {
  string name = 1;
}

message GetAccountRequest {
  string id = 1;
}

message ListAccountsRequest {
  uint64 skip = 1;
  uint64 take = 2;
}

message ListAccountsResponse {
  repeated Account accounts = 1;
}
